# ModeSelectVoice

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: _version.hpp  _version.hpp.in
src/: dllmain.cpp
